<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
   
    <string name="app_name">CalendarView</string>
</resources>
